# api_courses

./: .gitignore  README.md  changelog.md  pyproject.toml
fast_api/: fastapi.md  main.py
fast_api/libs/: models.py
