[tool.poetry]
name = "api-courses"
version = "0.1.0"
description = "An project for learn api rest and graphql"
authors = ["FranDev14 <olmelofran@gmail.com>"]
readme = "README.md"
packages = [{include = "api_courses"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
